--- a/firstproject/ansiblevm.yml
+++ b/firstproject/ansiblevm.yml
@@ -34,7 +34,7 @@
       rules:
         - name: SSH
           protocol: Tcp
-          destination_port_range: 22
+          destination_port_range: "*"
           access: Allow
           priority: 1001
           direction: Inbound
